vpc.tf
resource "aws_vpc" "mts-example" {
  cidr_block = "10.0.0.0/16"
  tags {
    Name = "mts-example"
  }
}
